--- a/src/Header.css
+++ b/src/Header.css
@@ -13,4 +13,21 @@
     display: flex;
     align-items: center;
 }
-/* 50.55 */
+.header__icon{
+  margin-right: 8px;
+}
+
+.header__inputButton{
+  width: 50px !important;
+  background-color: #fafafa;
+  border-left: 1px solid lightgray;
+  color: gray;
+}
+.header__icons{
+  display: flex;
+  align-items: center;
+}
+.header__input > input{
+  flex: 1;
+  border: none;
+}
