--- a/src/Header.css
+++ b/src/Header.css
@@ -3,6 +3,10 @@
   align-items: center;
   justify-content: space-between;
   padding: 20px;
+  position:sticky;
+  top: 0;
+  z-index: 100;
+  background-color: white;
 }
 
 .header__logo{
@@ -12,6 +16,8 @@
 .header__input{
     display: flex;
     align-items: center;
+    width: 40%;
+    border: 1px solid lightgray;
 }
 .header__icon{
   margin-right: 8px;
