--- a/src/sidebarRow.css
+++ b/src/sidebarRow.css
@@ -20,3 +20,10 @@
     background-color: lightgray;
     cursor: pointer;
 }
+
+.sidebarRow:hover > .sidebarRow__icon{
+    color: red;
+}
+.sidebarRow:hover > .sidebarRow__title{
+    font-weight: bold;
+}
