--- a/src/VideoRow.css
+++ b/src/VideoRow.css
@@ -19,11 +19,17 @@
     color: #606060;
 }
 
-.videoRow__headline{
-   font-size: 12px;
-   color: #606060;
+.videoRow__subs {
+    background-color: lightgray;
+    padding: 2px;
 }
+
 .videoRow__subsNumber{
     font-weight: bolder;
     color:rgb(84, 157, 211)
+}
+
+.videoRow__headline{
+   font-size: 12px;
+   color: #606060;
 }
